feat: adds StepOne logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Site Simples</title>
 </head>
 <body>
+   <img alt="logo com a escrita StepOne" src="./images/logo.png">
    <h1>Olá! :)</h1> 
    <p>Esse é um exemplo de um site super simples!</p>
    <button onclick="showText()">Mostrar conteúdo</button>
